tests/snapshots/undo_redo_comprehensive_test__U_different_line.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
ine 1
[i]ne 2
