tests/snapshots/undo_redo_comprehensive_test__complex_undo_redo_sequence.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
NEW[t]wo three four
