tests/snapshots/undo_redo_comprehensive_test__redo_paste.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:17
Lines: 1

Buffer:
hello worldhello [ ]
