tests/snapshots/undo_redo_comprehensive_test__undo_O_command.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[ ]
line 1
line 2
