tests/snapshots/undo_redo_comprehensive_test__undo_ci_quote.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
"hello world["]
