tests/snapshots/undo_redo_comprehensive_test__undo_delete_line.snap
---
source: tests/undo_redo_comprehensive_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 3

Buffer:
[l]ine 1
line 2
line 3
